# rustyocean

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml  verify.yml
src/: api.rs  lib.rs  main.rs  metrics.rs
src/api/: resources.rs
src/metrics/: account.rs  balance.rs  cdn_endpoint.rs  droplets.rs  floating_ip.rs  vpc.rs
