[package]
name = "rustyocean"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11" }

tokio = { version = "1.9", features = ["full"] }

prometheus = { version = "0.12.0" }
lazy_static = { version = "1.4" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tracing
tracing = { version = "0.1" }
tracing-futures = { version = "0.2" }
tracing-subscriber = { version = "0.2", features = ["json"] }

hyper = { version = "0.14", features = ["server"] }
